commit 834198fbd4585553b616a96f4c9d941be3db282a
Date:   Wed Jul 1 23:01:47 2015 +0300

    Refactored the threading

commit 36d046693571415464c63d1afaa41d301eda7851
Date:   Fri Jun 19 17:15:44 2015 +0300

    Refactored SMARK for ZmqCmd

commit 255af6414cf7eaed4107e01722043a4e6dd78631
Date:   Thu Jun 18 16:43:53 2015 +0300

    Added wiki pages

commit 16a4582a051d0399b7b2f137ec10cc92063f364e
Date:   Thu Jun 18 12:46:13 2015 +0300

    Wired up backtest servings tabview reviews
    and switch tabview to mdbartos feat branch - it handles timeseries.

commit 5f1c6ffee1e47bd957cf154348e559c7c76f5409
Date:   Thu Jun 18 00:27:39 2015 +0300

    Wired up backtest plot, and added TaLib documentation.

commit 2d9e66a7bd03d67c6d1319c10642646c2b8cba48
Date:   Wed Jun 17 10:47:49 2015 +0300

    Updated wiki.

commit 6f50dcdfc8cb4850523f9d60122b468b50522db4
Date:   Wed Jun 17 08:09:38 2015 +0300

    Added wiki/TabView.creole.
    
    examples tests run clean.

commit da85ba9ad60b51b45991463a43f4ca938c562a1c
Date:   Tue Jun 16 23:35:34 2015 +0300

    Fixed threading atexit hang.

commit e9990d6e83628289ffce7d340249b3e26bc88655
Date:   Tue Jun 16 19:24:03 2015 +0300

    Added share/examples/test_backtest_plot.sh

commit ab8bc2b15e2661009c89ca512bdbae8d69d5671b
Date:   Tue Jun 16 18:30:32 2015 +0300

    Fixed doc scripts again.

commit 3458b610860c5e8452c1a9378a6cac578b41a1cd
Date:   Tue Jun 16 17:58:16 2015 +0300

    Added wiki/RoadMap.creole

commit c25f73157f36f3c15ea2ef8e54cf158f4b39a9e1
Date:   Tue Jun 16 17:37:16 2015 +0300

    Fixing the test scripts.

commit ba0002fb6291574284a8cc047265783186c438f5
Date:   Tue Jun 16 14:01:52 2015 +0300

    Added shell scripts to keep the documentation up to date.

commit e6f4db4aae662009602c0f6cf1d1b42fc0628d1a
Date:   Tue Jun 16 01:04:19 2015 +0300

    Added tabview if it's one of the special pull request ones.

commit 388e0d870f42ddd81dbf059b7125937b1e33f3fb
Date:   Mon Jun 15 22:59:52 2015 +0300

    Fixed bugs and tests.
