@@ -1,9 +1,23 @@
 [behave]
-# this is required
+# this is required - the behave tests of OTCmd2 will not work without it
 stdout_capture=1
-# this is good, but not required
+# this is good, but not required, at least at the moment
 stderr_capture=1
 # this is a matter of taste, but is safer
+# If you set stop=1 then you will be dropped into the pdb debugger on an error.
 stop=1
-# If we set verbose, we will see the outout from OTCmd2
+# If we set verbose, we will see the output from OTCmd2. This is not required.
 verbose=1
+
+[behave.userdata]
+# userdata is used for commmunicating OTCmd2 command line arguments.
+# These are used by vTestCreated(oCtx) in tests/features/steps/behave_OTCmd2.py.
+# Typical usage is 'verbose', not to be confused with behave's verbose setting above.
+verbose=4
+# We use the long option names: OTCmd2 --help will show them.
+# Other option names are:
+# config
+# mt4dir
+# target
+# timeout
+
