@@ -1,3 +1,8 @@
+commit 7922904fca84c3f64a725014f5550779acda1656
+Date:   Sun Jul 12 21:58:31 2015 +0300
+
+    Updated to using behave 1.2.5 BDD
+
 commit 834198fbd4585553b616a96f4c9d941be3db282a
 Date:   Wed Jul 1 23:01:47 2015 +0300
 
